--- a/app/ui/css/transactions.module.css
+++ b/app/ui/css/transactions.module.css
@@ -1,9 +1,50 @@
 .filterContainer {
   display: flex;
+  margin-top: 1rem;
   align-items: center;
-  padding: 10px 0;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
+.filterInputContainer {
+  position: relative;
+  display: flex;
+  flex: 1 1 0%;
+  flex-shrink: 0;
+  align-items: center;
+}
+
+.filterInputLabel {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .filterContainer .fieldContainer {
   padding: 0 10px;
+}
+
+.editButtonContainer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.75rem;
+}
+
+.editButton {
+  border-radius: 0.375rem;
+  border-width: 1px;
+  padding: 0.5rem;
+}
+
+.editButton:hover {
+  background-color: rgb(243 244 246 / 1);
+}
+
+.editButtonIcon {
+  width: 1.25rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .filterContainer {
+    margin-top: 2rem;
+  }
 }
