Added sass to project and updated styling rules accordingly. Added sass module for global variables for abstracting min desktop width.

--- a/server/app/ui/css/layout.module.scss
+++ b/server/app/ui/css/layout.module.scss
@@ -1,3 +1,5 @@
+@use 'global-vars.scss';
+
 .bodyText {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,7 +22,7 @@
   padding: 1.5rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: global-vars.$desktop-width) {
   .appContainer {
     flex-direction: row;
     overflow: hidden;
