--- a/server/app/ui/css/nav.module.scss
+++ b/server/app/ui/css/nav.module.scss
@@ -1,3 +1,5 @@
+@use 'global-vars.scss';
+
 .nav {
   display: flex;
   height: 100%;
@@ -97,7 +99,7 @@
   background-color: rgb(249 250 251 / 1);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: global-vars.$desktop-width) {
   .nav {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
