--- a/server/app/ui/css/transaction.module.scss
+++ b/server/app/ui/css/transaction.module.scss
@@ -1,3 +1,5 @@
+@use 'global-vars.scss';
+
 .formContainer {
   margin-top: 1.5rem;
   border-radius: 0.375rem;
@@ -16,7 +18,7 @@
   gap: 1rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: global-vars.$desktop-width) {
   .formContainer {
     padding: 1.5rem;
   }
