--- a/server/app/ui/css/transactions-table.module.scss
+++ b/server/app/ui/css/transactions-table.module.scss
@@ -1,3 +1,5 @@
+@use 'global-vars.scss';
+
 .tableContainer {
   border-radius: 0.5rem;
   background-color: #f9fafbff;
@@ -65,7 +67,7 @@
   display: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: global-vars.$desktop-width) {
   .optionalCell {
     display: table-cell;
   }
