Fixed broken functionality. Updated integration tests.

--- a/server/app/ui/css/responsive-table.module.scss
+++ b/server/app/ui/css/responsive-table.module.scss
@@ -41,7 +41,7 @@
   background-color: #fff;
 }
 
-.responsiveTable td a {
+.responsiveTable td .rowLink {
   display: block;
   margin: -0.75rem;
   padding: 0.75rem;
